--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -11,7 +11,7 @@ jobs:
     name: Windows Export
     runs-on: ubuntu-latest
     container:
-      barichello/godot-ci:latest
+      seanmaxwell/godot-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
     name: Linux Export
     runs-on: ubuntu-latest
     container:
-      barichello/godot-ci:latest
+      seanmaxwell/godot-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -53,9 +53,9 @@ jobs:
 
   export-macos:
     name: macOS Export
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     container:
-      barichello/godot-ci:latest
+      seanmaxwell/godot-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -69,7 +69,7 @@ jobs:
           zip -r ${{ secrets.ITCHIO_GAME }}-macos.zip *
       - name: Upload artifact
         uses: actions/upload-artifact@v3
-        with:
+        with: 
           name: ${{ secrets.ITCHIO_GAME }}-macos
           path: build/macos/${{ secrets.ITCHIO_GAME }}.zip
         
@@ -77,7 +77,7 @@ jobs:
     name: Web Export
     runs-on: ubuntu-latest
     container:
-      barichello/godot-ci:latest
+      seanmaxwell/godot-ci:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
