--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://common/main/main.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://gui/base_ui.gd", "res://export_presets.cfg", "res://gui/fader/fader.gd", "res://scenes/intro_screen/intro_screen.gd", "res://license.md", "res://common/main/main.gd", "res://scenes/main_menu/main_menu.gd", "res://gui/pause_menu/pause_menu.gd", "res://autoload/scene_manager/scene_manager.gd", "res://autoload/ui_manager/ui_manager.gd"]
+open_scripts=["res://export_presets.cfg", "res://common/main/main.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
