--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/Jason/AppData/Local/Godot/Godot/Godot_v4.0-stable_mono_win64.exe"
+executable_path="C:/ProgramData/chocolatey/lib/godot/tools/godot_v4.0.2-stable_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
