--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,7 +1,13 @@
 list=Array[Dictionary]([{
+"base": &"CharacterBody2D",
+"class": &"Actor",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/actors/actor.gd"
+}, {
 "base": &"Control",
 "class": &"BaseUI",
 "icon": "",
 "language": &"GDScript",
-"path": "res://gui/base_ui.gd"
+"path": "res://scripts/ui/base_ui.gd"
 }])
