--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+ 22 lines (18 sloc) 389 Bytes
+# Godot 4+ specific ignores
+.godot/
+
 # Godot-specific ignores
 .import/
 export.cfg
+export_presets.cfg
+# Dummy HTML5 export presets file for continuous integration
+!.github/dist/export_presets.cfg
 
 # Imported translations (automatically generated from CSV files)
 *.translation
@@ -8,6 +15,13 @@ export.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+mono_crash.*.json
+
+# System/tool-specific ignores
+.directory
+.DS_Store
+*~
 
 .vscode/
 build/
+assets/
