--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://common/main/main.tscn"]
+open_scenes=["res://scenes/main.tscn", "res://scenes/ui/fader.tscn", "res://scenes/ui/pause_menu.tscn", "res://scenes/ui/menu_button.tscn", "res://scenes/autoload/scene_manager.tscn", "res://scenes/levels/main_menu.tscn", "res://scenes/levels/base_level.tscn", "res://scenes/actors/actor.tscn", "res://scenes/actors/player.tscn", "res://scenes/levels/test_level.tscn", "res://scenes/autoload/ui_manager.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://export_presets.cfg", "res://common/main/main.gd"]
-open_help=[]
+open_scripts=["res://scripts/actors/actor.gd", "res://scripts/levels/base_level.gd", "res://scripts/ui/base_ui.gd", "res://export_presets.cfg", "res://scripts/ui/fader.gd", "res://scripts/levels/intro_screen.gd", "res://scripts/main.gd", "res://scripts/levels/main_menu.gd", "res://scripts/ui/pause_menu.gd", "res://scripts/actors/player.gd", "res://scripts/autoload/scene_manager.gd", "res://scripts/autoload/ui_manager.gd"]
+open_help=["Dictionary"]
 script_split_offset=70
 list_split_offset=0
